fix: pawn 같은 방향으로 무한정 이동할 수 있는 버그 수정